force-app/main/default/objects/Office__c/fields/ChristiesAccountId__c.field-meta.xml
<CustomField>
    <fullName>ChristiesAccountId__c</fullName>
    <label>Christies Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>