force-app/main/default/objects/Office__c/fields/DetailsURL__c.field-meta.xml
<CustomField>
    <fullName>DetailsURL__c</fullName>
    <label>Details URL</label>
    <type>Url</type>
</CustomField>