force-app/main/default/objects/Office__c/fields/DisplayPropertiesOnWebsite__c.field-meta.xml
<CustomField>
    <fullName>DisplayPropertiesOnWebsite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Properties On Website</label>
    <type>Checkbox</type>
</CustomField>