force-app/main/default/objects/Office__c/fields/ExternalCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>ExternalCreatedDate__c</fullName>
    <label>External Created Date</label>
    <type>DateTime</type>
</CustomField>