force-app/main/default/objects/Office__c/fields/FacebookUrl__c.field-meta.xml
<CustomField>
    <fullName>FacebookUrl__c</fullName>
    <label>Facebook URL</label>
    <type>Url</type>
</CustomField>