force-app/main/default/objects/Office__c/fields/FoursquareUrl__c.field-meta.xml
<CustomField>
    <fullName>FoursquareUrl__c</fullName>
    <label>Foursquare URL</label>
    <type>Url</type>
</CustomField>