force-app/main/default/objects/Office__c/fields/LinkedinUrl__c.field-meta.xml
<CustomField>
    <fullName>LinkedinUrl__c</fullName>
    <label>Linkedin URL</label>
    <type>Url</type>
</CustomField>