force-app/main/default/objects/Office__c/fields/PhoneExtension__c.field-meta.xml
<CustomField>
    <fullName>PhoneExtension__c</fullName>
    <label>Phone Extension</label>
    <type>Phone</type>
</CustomField>