force-app/main/default/objects/Office__c/fields/RfgBrandName__c.field-meta.xml
<CustomField>
    <fullName>RfgBrandName__c</fullName>
    <label>RFG Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>