force-app/main/default/objects/Office__c/fields/RfgGuid__c.field-meta.xml
<CustomField>
    <fullName>RfgGuid__c</fullName>
    <label>RGF GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>