force-app/main/default/objects/Office__c/fields/StreetLine1__c.field-meta.xml
<CustomField>
    <fullName>StreetLine1__c</fullName>
    <label>Street (Line1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>