force-app/main/default/objects/Office__c/fields/TollFreeExtension__c.field-meta.xml
<CustomField>
    <fullName>TollFreeExtension__c</fullName>
    <label>Toll Free Extension</label>
    <type>Phone</type>
</CustomField>