force-app/main/default/objects/Office__c/fields/TollFreeNumber__c.field-meta.xml
<CustomField>
    <fullName>TollFreeNumber__c</fullName>
    <label>Toll Free Number</label>
    <type>Phone</type>
</CustomField>