force-app/main/default/objects/Office__c/fields/TwitterUrl__c.field-meta.xml
<CustomField>
    <fullName>TwitterUrl__c</fullName>
    <label>Twitter URL</label>
    <type>Url</type>
</CustomField>