force-app/main/default/objects/Office__c/fields/VimeoUrl__c.field-meta.xml
<CustomField>
    <fullName>VimeoUrl__c</fullName>
    <label>Vimeo URL</label>
    <type>Url</type>
</CustomField>