force-app/main/default/objects/Office__c/fields/WebsiteURL__c.field-meta.xml
<CustomField>
    <fullName>WebsiteURL__c</fullName>
    <label>Website URL</label>
    <type>Url</type>
</CustomField>