force-app/main/default/objects/Office__c/fields/YoutubeUrl__c.field-meta.xml
<CustomField>
    <fullName>YoutubeUrl__c</fullName>
    <label>Youtube URL</label>
    <type>Url</type>
</CustomField>